src/test/contracts/negative/dynamic_entry_wrong_storage.jsligo
type storage =
  {
    storage : int;
    dynamic_entrypoints;
    extra : int
  }

@entry
  const foo = (_u : unit, _storage : storage) : [list<operation>, storage] => failwith ()